--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: roboto, sans-serif;
+  font-family:font-family: "Nunito Sans", serif;
   background-color: aqua;
   animation: 5s infinite colors ease-in-out;
 }
